# new-prompt

./: CLAUDE.md  LICENSE  README.md  pyproject.toml
src/newprompt/: __init__.py  cli.py  mcp_server.py
tests/: test_cli.py  test_mcp_server.py
